//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Post {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  content String
  published Boolean [not null, default: false]
  author User [not null]
  authorId Int [not null]
  categories Category [not null]
}

Table Category {
  id Int [pk, increment]
  posts Post [not null]
}

Table Profile {
  id Int [pk, increment]
  bio String
  user User [not null]
  userId Int [unique, not null]
}

Table User {
  id Int [pk, increment]
  jobTitle String [not null]
  email String [unique, not null]
  name String
  posts Post [not null]
  profile Profile
}

Table CategoryToPost {
  categoriesId Int [ref: > Category.id]
  postsId Int [ref: > Post.id]
}

Ref: Post.authorId > User.id

Ref: Profile.userId - User.id